<resources>
    <string name="app_name">GeoPhotoApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="storage_permission_rationale_title">Pozwolenie</string>
    <string name="storage_permition_rationale_message">Czy pozwolić na zapis?</string>
    <string name="storage_permission_denied_message">Nie masz zezwolenia na zapisywanie</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDVq6DnclU_6QpoMiNQr1XLVsPzyg__L_g</string>
    <string name="login_authentication_error">Login failed!</string>
    <string name="login_button">Login</string>
    <string name="login_fill_all_fields">Please fill all required fields!</string>
    <string name="login_password">password</string>
    <string name="login_password_confirm">confirm password</string>
    <string name="login_please_login">Log in to your account</string>
    <string name="login_success">You are now logged in</string>
    <string name="login_username">username</string>
    <string name="login_welcome">Welcome</string>
    <string name="register_button">Register</string>
    <string name="register_create_account">Create new account</string>
    <string name="register_email">Email</string>
    <string name="register_error">Error while registering: %s</string>
    <string name="register_success">New user registered!</string>
    <string name="register_title">Register</string>
    <string name="permissions_needed">Permissions are needed</string>
    <string name="error">Something went wrong</string>
    <string name="action_logout">Logout</string>
    <string name="logout">You are logged out</string>
    <string name="selected_photos">Selected %d photos</string>
    <string name="edit_exif">Edit exif attributes</string>
    <string name="exif_location">Set up photo location</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort by</string>
    <string name="date_ascending">Date ascending</string>
    <string name="date_descending">Date descending</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_device">Device</string>
    <string name="filter_aperture">Aperture</string>
    <string name="filter_exposure">Exposure</string>
    <string name="filter_focal_length">Focal length</string>
    <string name="save">Apply</string>
    <string name="reset">Reset</string>
    <string name="upload_photos">Upload photos</string>
    <string name="update_photo_exif_params">Update photo EXIF params</string>
    <string name="latitude_text">Latitude:</string>
    <string name="longitude_text">Longitude:</string>
    <string name="camera_model_label">Camera model:</string>
    <string name="focal_length_label">Focal length:</string>
    <string name="aperture_label">Aperture:</string>
    <string name="exposure_label">Exposure:</string>
    <string name="filter_authors">Authors: </string>
    <string name="author_label">Author</string>
    <string name="description_label">Description: </string>
    <string name="wait">Please wait</string>
    <string name="downloading">Downloading photos</string>
    <string name="uploading">Uploading photos</string>
    <string name="date_pick_button">Pick date</string>
    <string name="date_label">Date:</string>
    <string name="download_finished">Download finished</string>
</resources>
